# core

./: .env.example  .flake8  .gitignore  .gitmessage  COMMIT_GUIDELINES.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MISSION.md  README.md  README_zh.md  SECURITY.md  SUMMARY.md  agent_developer_console.jsx  agent_engine.py  agent_engine_v2.py  app.py  autonomous_worker.py  check_syntax.py  dashboard.py  docker-compose.yml  economics.html  hardware_inventory_dashboard.jsx  heartbeat_daemon.py  index.html  insurance_actuary_api.py  insurance_claim_portal.jsx  insurance_governance_api.jsx  insurance_governance_api.py  juror_summoning_api.py  jury_portal.jsx  langchain_client.py  legal.html  lightning_engine.py  master_node.py  mcp_server.py  migrate_domain.sh  network_latency_profiler.jsx  node_discovery_ux.jsx  (+24 more)
PIPs/: PIP-015.md  PIP-017.md
api/: hub_discovery_api.py
auth/: identity_migration_api.py  sovereign_identity_api.py
backend/: app.py
cognitive_vault/: emotion_engine.py  memory_cipher.py
composeApp/: build.gradle.kts
core/: .dockerignore  .gitignore  CITATION.cff  Dockerfile  agent_engine_v2.py  dashboard.py  master_node.py  mcp_server.py  requirements.txt  start_node.sh
core/node_legacy/rust_tpm/: Cargo.toml
core/sdk/: pyproject.toml
core/sdk/src/proxy_agent/: client.py
docs/: AGENCY_PARTNERS.md  API_SPEC.md  ARCHITECTURE.md  BUILDERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_GUIDELINES.md  CONTRIBUTING.md  CONTRIBUTING_LEGAL.md  CONTRIBUTING_RUST.md  CONTRIBUTING_ZH.md  DEPRECATION.md  DISCUSSIONS_GUIDE.md  GOVERNANCE.md  INCIDENT_RESPONSE.md  README.md  README_zh.md  ROADMAP.md  SLA.md  WHITEPAPER.md
economics/: hodl_escrow.py  insurance_pool.py  l2_escrow.py  proxy_pass_escrow.py
examples/: getting_started.py
governance/: appellate_vrf.py  evidence_locker.py  interaction_review.md  jury_bond.py  remote_attestation.py  verdict_aggregator.py
hardware-node/: agent_engine.py  hardware_heartbeat.py  mock_boot.py
infrastructure/: Dockerfile
legacy/: HODL_Invoice_Manager.py
middleware/: traffic_shaper.py
node/: Dockerfile  docker-compose.yml  geofence_mobile.py  hardware_heartbeat.py  health_dashboard.py  node_daemon.py  ocr_validator.py  privacy_guard.py  proxy-tamper.service  qr_sharing.py  remote_attestation.py  secure_memory.py  tamper_listener.py  tpm_binding.py  tpm_emulator.py  tpm_wrapper.py
node_legacy/: secure_memory.py
ops/: anomaly_detection.py  dashboard_orchestrator.py  differential_forensic_api.py  fraud_investigation_api.py  governance_juror_api.py  hardware_audit_api.py  hardware_lifecycle_api.py  identity_auditor_api.py  insurance_governance_api.py  insurance_payout_auditor.py  juror_voting_api.jsx  juror_voting_api.py  logistics_webhook_api.py  performance_profiler.py  precedent_search_api.py  probing_quarantine_api.py  security_incident_api.py
pan_command_center/: index.html
pan_gateway/: main.py
pan_tactical/: gradle.properties  settings.gradle.kts
protocols/: ORP_STANDARDS.md
proxy-core/: Cargo.toml
proxy-core/src/: lib.rs  tpm_binding.rs
redundancy/: nostr_fallback.py
reputation/: forensic_auditor.py  reputation_decay.py  slashing_engine.py  snapshot_utility.py
scripts/: CHEATS.md  install_fleet_dashboard.sh  node_health_check.sh  tamper_response.sh
settlement/: escrow_oracle.py
specs/: openapi.yaml
src/: README.md
static/: ASSETS.md  aup.html  economics.html
streamlit_core/: agent_engine.py  db_manager.py  ui_injector.py
templates/: DASHBOARD.md  admin.html  admin_old.html  audit.html  base.html  dashboard.html  faq.html  legal.html  marketplace.html  node_detail.html  powerchat.html  search.html  shop.html  (+2 more)
(+427 files in other folders)
