[package]
name = "proxy-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "proxy_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"