[package]
name = "proxy-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "proxy_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
chacha20poly1305 = "0.10"
rand = "0.8.5"
base64 = "0.21.7"
sha2 = "0.10"
aes-gcm = "0.10.3"

# --- NEW DEPENDENCIES ADDED HERE ---
thiserror = "1.0"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }

# Target-specific dependency: Only install the TPM stack if we are on a Linux production server
[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = "7.2.0"