[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-agent"
version = "0.1.0"
authors = [
  { name="Proxy Protocol Team", email="engineering@proxyprotocol.com" },
]
description = "Hire human proxies for AI Agent tasks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
"Homepage" = "https://github.com/Proxy-Agent-Network/core"
"Bug Tracker" = "https://github.com/Proxy-Agent-Network/core/issues"
