[package]
name = "proxy-tpm-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["mock"]
mock = [] 
hardware = ["dep:tss-esapi"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Simulation libraries
rand = "0.8"
sha2 = "0.10"

# Hardware libraries (Optional)
tss-esapi = { version = "7.5.0", optional = true }